# library/serializers.py
@@ -1,6 +1,6 @@
 from rest_framework import serializers
 
-from library.models import Book
+from library.models import Book, Borrowing
 
 
 class BookSerializer(serializers.ModelSerializer):
@@ -15,7 +15,6 @@ class BookSerializer(serializers.ModelSerializer):
             "number",
             "created",
             "modified",
-            "created_by",
         )
         read_only_fields = ("id", "created", "modified")
 
@@ -35,3 +34,11 @@ class LibrarianBookSerializer(BookSerializer):
             "created_by",
         )
         read_only_fields = ("id", "created", "modified", "created_by")
+
+
+class StudentBorrowBookSerializer(serializers.ModelSerializer):
+    books = serializers.PrimaryKeyRelatedField(many=True, queryset=Book.objects.all())
+
+    class Meta:
+        model = Borrowing
+        fields = ("books",)
